--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/*.xml
 *.iws
 *.iml
 *.ipr
@@ -38,3 +39,6 @@ build/
 .DS_Store
 
 .env
+out/
+out
+./out
